# http

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Singleton.h  Types.h  main.cpp
Exception/: Exception.cpp  Exception.h  ExceptionInterface.cpp  ExceptionInterface.h  InvalidArgumentException.cpp  InvalidArgumentException.h  NullPointerException.cpp  NullPointerException.h  RuntimeException.cpp  RuntimeException.h
Http/Socket/: Constants.h  Socket.cpp  Socket.h  SocketInterface.cpp  SocketInterface.h
Loop/: AbstractWatcher.h  EventLoop.cpp  EventLoop.h  IdleWatcher.cpp  IdleWatcher.h  IoWatcher.cpp  IoWatcher.h
Socket/: Socket.cpp  Socket.h  SocketInterface.h
